# ArduinoNanoCMake

./: CMakeLists.txt  CMakePresets.json  README.MD
cmake/toolchains/: ArduinoNano.cmake
src/: CMakeLists.txt  blink.cpp  main.cpp
